--- a/skill.html
+++ b/skill.html
@@ -317,7 +317,7 @@ a:hover { text-decoration: underline; }
 <div class="video-section">
   <h2>My Communication Skill</h2>
   <video width="600" controls>
-    <source src="communication.mov" type="video/mp4">
+    <source src="communication.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
@@ -327,4 +327,5 @@ a:hover { text-decoration: underline; }
     </main>
   </div>
 </body>
+
 </html>
